--- a/style.css
+++ b/style.css
@@ -29,25 +29,25 @@ h1{
 #button1{
   background: lightgreen;
 }
-#button1:active #button1.li{
+#button1:active, #button1.li{
   background: green;
 }
 #button2{
   background: lightblue;
 }
-#button2:active #button2.lit{
+#button2:active, #button2.lit{
   background: blue;
 }
 #button3{
   background: pink;
 }
-#button3:active #button3.lit{
+#button3:active, #button3.lit{
   background: red;
 }
 #button4{
   background: lightyellow;
 }
-#button4:active #button4.lit{
+#button4:active, #button4.lit{
   background: yellow;
 }
 #gameButtonArea > button{
